--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>web-application-library</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <artifactId>legal-office-lib</artifactId>
+            <version>1.0.0</version>
         </dependency>  
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -26,6 +26,12 @@
             <version>0.1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency> 
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>report-management</artifactId>
+            <version>1.0.0</version>
+            <type>war</type>
+        </dependency>
     </dependencies>
 
     <build>
@@ -48,6 +54,23 @@
                 <version>2.1.1</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    
+                     <dependentWarExcludes>
+                        WEB-INF/web.xml,
+                        WEB-INF/glassfish-web.xml, 
+                        index.xhtml                       
+                    </dependentWarExcludes>
+                    
+                    <overlays>
+                        <overlay>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>system-management</artifactId>
+                        </overlay>
+                        <overlay>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>report-management</artifactId>
+                        </overlay>
+                    </overlays>
                 </configuration>
             </plugin>
         </plugins>
