--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,7 @@
             /WEB-INF/faces-config-hrm.xml,
             /WEB-INF/faces-config-cm.xml,
             /WEB-INF/faces-config-fm.xml,
+            /WEB-INF/faces-config-rm.xml,
             /WEB-INF/faces-config-lo.xml
         </param-value>
     </context-param>
