--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>system-management</artifactId>
-            <version>1.0.0</version>
+            <version>2.0.0</version>
             <type>war</type>
         </dependency> 
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>report-management</artifactId>
-            <version>1.0.0</version>
+            <version>2.0.0</version>
             <type>war</type>
         </dependency>
     </dependencies>
@@ -61,14 +61,19 @@
                         index.xhtml                       
                     </dependentWarExcludes>
                     
-                    <overlays>
-                        <overlay>
-                            <groupId>${project.groupId}</groupId>
-                            <artifactId>system-management</artifactId>
-                        </overlay>
+                    <overlays>                        
                         <overlay>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>report-management</artifactId>
+                            <excludes>
+                                <exclude>dashboard/admin/*</exclude>
+                                <exclude>admin/*</exclude>   
+                                <exclude>common/*</exclude>           
+                            </excludes>
+                        </overlay>
+                        <overlay>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>system-management</artifactId>
                         </overlay>
                     </overlays>
                 </configuration>
