--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>legal-office-lib</artifactId>
-            <version>1.0.0</version>
+            <artifactId>system-management-lib</artifactId>
+            <version>2.1.0</version>
         </dependency>  
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>system-management</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0</version>
             <type>war</type>
         </dependency> 
         <dependency>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>financial-management</artifactId>
-            <version>1.3.0</version>
+            <version>1.4.0</version>
             <type>war</type>
         </dependency>
     </dependencies>
