--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,8 @@
         <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>
             /WEB-INF/faces-config-sm.xml,
+            /WEB-INF/faces-config-rm.xml,
+            /WEB-INF/faces-config-fm.xml,
             /WEB-INF/faces-config-lo.xml
         </param-value>
     </context-param>
