--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>client-management</artifactId>
+            <version>2.0.0</version>
+            <type>war</type>
+        </dependency> 
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>financial-management</artifactId>
             <version>1.5.0</version>
             <type>war</type>
@@ -61,7 +67,7 @@
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                     
-                     <dependentWarExcludes>
+                    <dependentWarExcludes>
                         WEB-INF/web.xml,
                         WEB-INF/glassfish-web.xml, 
                         index.xhtml                       
@@ -71,6 +77,10 @@
                         <overlay>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>report-management</artifactId>
+                        </overlay>
+                        <overlay>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>client-management</artifactId>
                         </overlay>
                         <overlay>
                             <groupId>${project.groupId}</groupId>
