--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
                     <dependentWarExcludes>
                         WEB-INF/web.xml,
                         WEB-INF/glassfish-web.xml, 
+                        loginDialog.xhtml,
                         index.xhtml                       
                     </dependentWarExcludes>
                     
